added virtual thread support for lighter execution